<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

     <EditText
        android:id="@+id/movie_name_editText"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/movie_name_hint"
        android:inputType="textPersonName"
        android:maxLength="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/description_editText"
        android:layout_width="368dp"
        android:layout_height="100dp"
        android:layout_marginBottom="212dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:maxLength="1000"
        android:singleLine="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/description_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/description_textView"
        android:textColor="?android:attr/colorForeground"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_name_editText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/genre_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/genre_textView"
        android:textColor="?android:attr/colorForeground"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_editText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/rating_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/rating_textView"
        android:textColor="?android:attr/colorForeground"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre_textView" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/movie_genre"
        app:layout_constraintBottom_toBottomOf="@+id/genre_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/genre_textView"
        app:layout_constraintTop_toTopOf="@+id/genre_textView"
        app:layout_constraintVertical_bias="0.653" />

    <SeekBar
        android:id="@+id/rating_seekBar"
        android:layout_width="240dp"
        android:layout_height="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:max="@integer/rating_seekbar_max"
        android:min="@integer/rating_seekbar_min"
        app:layout_constraintBottom_toBottomOf="@+id/rating_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toEndOf="@+id/rating_textView"
        app:layout_constraintTop_toTopOf="@+id/rating_textView"
        app:layout_constraintVertical_bias="0.666" />

    <EditText
        android:id="@+id/imdb_editText"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/imdb_editText"
        android:inputType="textUri|textPersonName|date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_editText2"
        app:layout_constraintVertical_bias="0.082" />

    <EditText
        android:id="@+id/year_editText2"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/year_editText_hint"
        android:inputType="textPersonName|number|date"
        android:maxLength="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_seekBar"
        app:layout_constraintVertical_bias="0.104" />

    <Button
        android:id="@+id/save_movie_button"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imdb_editText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/progress_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/progress_percentage"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rating_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rating_seekBar"
        app:layout_constraintTop_toTopOf="@+id/rating_textView" />


</android.support.constraint.ConstraintLayout>

